# markdown_hero

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: helpers.md  reference.md
markdown_hero/: __init__.py  chunks.py  cli.py  docx.py  errors.py  extract.py  io.py  lint.py  models.py  strip.py  transform.py
tests/: test_chunks.py  test_cli.py  test_docx.py  test_extract.py  test_io.py  test_lint.py  test_strip.py  test_transform.py
